<resources>
    <string name="app_name">PTBSejahtera</string>
    <string name="teksmasuk_login">Masuk</string>
    <string name="teksdenganakunanda_login">dengan akun Anda</string>
    <string name="hintemail">Masukan email Anda disini</string>
    <string name="hintpassword">Masukan password Anda disini</string>
    <string name="lupapasswordlogin">lupa password?</string>
    <string name="belummemilikiakunlogin">belum memiliki akun?</string>
    <string name="masland">Masuk</string>
    <string name="atauland">atau</string>
    <string name="daflan">Daftar</string>
    <string name="teksbutonmasuk_login">Masuk</string>
    <string name="teksdaftar_reg">Daftar</string>
    <string name="teksmulaijalan_reg">mulai perjalananmu!</string>
    <string name="buttonsudahakun_reg">sudah memiliki akun?</string>
    <string name="teksdaftarbut_reg">Daftar</string>
    <string name="hintconfirpass_reg">Konfirmasi password kembali</string>
    <string name="teksinputuser_reg">Masukan username Anda</string>
    <string name="hintinputinstitusi_reg">Masukan nama institusi Anda</string>
    <string name="hintinputnomor_reg">Masukan nomor Anda disini</string>
    <string name="forpass">Forgot Password</string>
    <string name="enteremail">Masukkan Emailmu:</string>
    <string name="forcan">Cancel</string>
    <string name="foreset">Reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navbartekshome">Home</string>
    <string name="navbartekskalender">Kalender</string>
    <string name="navbartekssearch">Search</string>
    <string name="tabtekssertifikat">Sertifikat</string>
    <string name="tekstabcv">CV</string>
</resources>