<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paternbook"
    tools:context=".Landing">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:src="@drawable/logoedumingle"
        app:layout_constraintBottom_toTopOf="@+id/layland"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layland"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ombaklandingpage" />

            <Button
                android:id="@+id/butmaslan"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/pb"
                android:text="@string/masland"
                android:textColor="#70B000"
                android:textSize="24sp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="85dp"/>

            <TextView
                android:id="@+id/atauland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/pr"
                android:text="@string/atauland"
                android:textColor="#F6F5F8"
                android:textSize="23sp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/butdaflan"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pb"
                android:text="@string/daflan"
                android:textColor="#FBF9F9"
                android:textSize="24sp"
                app:strokeColor="#FEFEFE"
                app:strokeWidth="4dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="200dp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>