<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paternbook"
    tools:context=".Login_Activity">

    <ImageView
        android:id="@+id/logodilogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="230dp"
        android:paddingLeft="90dp"
        android:paddingRight="90dp"
        android:src="@drawable/logoedulogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewlogin"
            android:layout_width="match_parent"
            android:layout_height="430dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/ombaklogin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ombaklogin"/>

            <TextView
                android:id="@+id/textmasuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:fontFamily="@font/pb"
                android:text="@string/teksmasuk_login"
                android:textColor="@color/white"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/teksdenganakun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="90dp"
                android:layout_marginRight="25dp"
                android:fontFamily="@font/pb"
                android:text="@string/teksdenganakunanda_login"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintTop_toBottomOf="@id/textmasuk" />

            <EditText
                android:id="@+id/usernamelog"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="160dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/fieldinput"
                android:drawableStart="@drawable/iconemail"
                android:drawablePadding="10dp"
                android:fontFamily="@font/pb"
                android:hint="@string/hintemail"
                android:padding="10dp"
                android:textColorHint="@color/hintijo" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>