<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frame_layout_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/navbarbaru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/navbarbaru"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:weightSum="4"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:elevation="10dp"
        android:gravity="center"
        android:background="@drawable/bgnavbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/navLayoutHome"
            android:background="@drawable/round_belakanghome"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/homenavimage"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/vektorhome_active"/>

            <TextView
                android:id="@+id/homenavtxt"
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navbartekshome"
                android:fontFamily="@font/pb"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/navLayoutKalender"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/kalendernavimage"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/vektorkalender"/>

            <TextView
                android:id="@+id/kalendernavtxt"
                android:visibility="gone"
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navbartekskalender"
                android:fontFamily="@font/pb"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/navLayoutSearch"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/searchnavimage"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/baseline_search_24"/>

            <TextView
                android:id="@+id/searchnavtxt"
                android:visibility="gone"
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navbartekssearch"
                android:fontFamily="@font/pb"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>